Fix height issue on mobile

--- a/assets/stylesheets/pages/team.styl
+++ b/assets/stylesheets/pages/team.styl
@@ -133,6 +133,7 @@ for hour in 0 1 2 3 4 5 6 7 22 23
   
   .app-container
     min-width: 100%
+    height: auto
     flex-direction: column
   
   .app-sidebar
@@ -140,7 +141,7 @@ for hour in 0 1 2 3 4 5 6 7 22 23
     
   .timezone-list
     justify-content: flex-start
-    flex-direction: column
+    flex-direction: column-reverse
   
   .timezone
     display: flex
